SET(INIH_VERSION 1.0)
SET(INIH_SOVERSION 0.1)

SET(LIBINIH_SRC ini.c)
#AUX_SOURCE_DIRECTORY(. LIBINIH_SRC)
ADD_LIBRARY(inih SHARED ${LIBINIH_SRC})
SET_TARGET_PROPERTIES(inih PROPERTIES VERSION ${INIH_VERSION} SOVERSION ${INIH_SOVERSION})

ADD_LIBRARY(inih_static STATIC ${LIBINIH_SRC})
SET_TARGET_PROPERTIES(inih_static PROPERTIES OUTPUT_NAME "inih")


#INSTALL (TARGETS iniparser iniparser_static
#    LIBRARY DESTINATION lib64
#    ARCHIVE DESTINATION lib64)

#INSTALL (FILES ${${CMAKE_PROJECT_NAME}_SOURCE_DIR}/include/ini.h DESTINATION include/)


SET(LIBINIHPP_SRC INIReader.cc ini.c)
ADD_LIBRARY(inihpp SHARED ${LIBINIHPP_SRC})
SET_TARGET_PROPERTIES(inihpp PROPERTIES VERSION ${INIH_VERSION} SOVERSION ${INIH_SOVERSION})

ADD_LIBRARY(inihpp_static STATIC ${LIBINIHPP_SRC})
SET_TARGET_PROPERTIES(inihpp_static PROPERTIES OUTPUT_NAME "inihpp")


#INSTALL (TARGETS iniparser iniparser_static
#    LIBRARY DESTINATION lib64
#    ARCHIVE DESTINATION lib64)

#INSTALL (FILES ${${CMAKE_PROJECT_NAME}_SOURCE_DIR}/include/ini.h DESTINATION include/)


