SET(INI_PARSER_VERSION 1.0)
SET(INI_PARSER_SOVERSION 0.1)

#SET(LIBINI_PARSER_SRC ini.c)
AUX_SOURCE_DIRECTORY(. LIBINI_PARSER_SRC)
ADD_LIBRARY(iniparser SHARED ${LIBINI_PARSER_SRC})
SET_TARGET_PROPERTIES(iniparser PROPERTIES VERSION ${INI_PARSER_VERSION} SOVERSION ${INI_PARSER_SOVERSION})

ADD_LIBRARY(iniparser_static STATIC ${LIBINI_PARSER_SRC})
SET_TARGET_PROPERTIES(iniparser_static PROPERTIES OUTPUT_NAME "iniparser")


INSTALL (TARGETS iniparser iniparser_static
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${${CMAKE_PROJECT_NAME}_SOURCE_DIR}/include/ini.h DESTINATION include/)





